feat: Añadir soporte para el nuevo campo 'periodo' en los cursos intersemestrales. Se implementa la normalización de datos en el servicio y se actualizan los componentes para mostrar el período en las listas y formularios. Se mejora la presentación de la información del período en las vistas de estudiantes y funcionarios.

--- a/src/app/shared/components/curso-list/curso-list.component.html
+++ b/src/app/shared/components/curso-list/curso-list.component.html
@@ -48,8 +48,8 @@
     <ng-container matColumnDef="periodo">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Período</th>
       <td mat-cell *matCellDef="let curso">
-        <span class="periodo-badge" [style.background-color]="getColorPeriodo(curso.periodoAcademico)">
-          {{ curso.periodoAcademico || 'N/A' }}
+        <span class="periodo-badge" [style.background-color]="getColorPeriodoBadge(curso)">
+          {{ obtenerPeriodoDisplay(curso) }}
         </span>
       </td>
     </ng-container>
