--- a/src/app/pages/funcionario/cursos-intersemestrales/gestionar-cursos/gestionar-cursos.component.html
+++ b/src/app/pages/funcionario/cursos-intersemestrales/gestionar-cursos/gestionar-cursos.component.html
@@ -67,6 +67,19 @@
         </td>
       </ng-container>
 
+      <!-- Período -->
+      <ng-container matColumnDef="periodo">
+        <th mat-header-cell *matHeaderCellDef>Período</th>
+        <td mat-cell *matCellDef="let curso">
+          <div class="periodo-info">
+            <span class="periodo-badge">{{ obtenerPeriodoCodigo(curso) }}</span>
+            <small class="periodo-descripcion" *ngIf="obtenerPeriodoDescripcion(curso) as descripcion">
+              {{ descripcion }}
+            </small>
+          </div>
+        </td>
+      </ng-container>
+
       <!-- Docente -->
       <ng-container matColumnDef="objDocente">
         <th mat-header-cell *matHeaderCellDef>Docente</th>
