--- a/src/app/pages/funcionario/cursos-intersemestrales/preinscribir-estudiantes/preinscribir-estudiantes.component.html
+++ b/src/app/pages/funcionario/cursos-intersemestrales/preinscribir-estudiantes/preinscribir-estudiantes.component.html
@@ -2,7 +2,7 @@
   
   <!-- Filtro por curso -->
   <div class="filtro-section">
-    <h3>📚 Seleccionar Curso</h3>
+    <h3>Seleccionar Curso</h3>
     <form [formGroup]="filtroForm">
       <mat-form-field appearance="outline" class="curso-selector">
         <mat-label>Selecciona un curso</mat-label>
