Mejoras fase 1, funcional

--- a/src/app/pages/secretaria/homologacion-asignaturas/homologacion-asignaturas.component.html
+++ b/src/app/pages/secretaria/homologacion-asignaturas/homologacion-asignaturas.component.html
@@ -41,6 +41,7 @@
           [template]="template"
           [proceso]="'homologacion'"
           [loading]="loading"
+          [mostrarObservaciones]="false"
           (generarDocumento)="onGenerarDocumento($event)"
           (cancelar)="onCancelarGeneracion()"
           (tengoDocumento)="onTengoDocumento()">
