--- a/src/app/pages/secretaria/reingreso-estudiante/reingreso-estudiante.component.html
+++ b/src/app/pages/secretaria/reingreso-estudiante/reingreso-estudiante.component.html
@@ -41,6 +41,7 @@
           [template]="template"
           [proceso]="'reingreso'"
           [loading]="loading"
+          [mostrarObservaciones]="false"
           (generarDocumento)="onGenerarDocumento($event)"
           (cancelar)="onCancelarGeneracion()"
           (tengoDocumento)="onTengoDocumento()">
