Adicion de vista en secretaria

--- a/src/app/pages/secretaria/homologacion-asignaturas/homologacion-asignaturas.component.html
+++ b/src/app/pages/secretaria/homologacion-asignaturas/homologacion-asignaturas.component.html
@@ -112,4 +112,11 @@
 
       </app-card-container>
 
+      <app-approved-requests-section
+        title="Solicitudes aprobadas"
+        icon="task_alt"
+        [solicitudes]="solicitudesAprobadas"
+        [loading]="cargandoSolicitudesAprobadas">
+      </app-approved-requests-section>
+ 
 </div>
