--- a/src/app/shared/components/curso-list/curso-list.component.html
+++ b/src/app/shared/components/curso-list/curso-list.component.html
@@ -6,7 +6,8 @@
   </mat-form-field>
 
   <!-- Tabla de cursos -->
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+  <div class="tabla-wrapper">
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
     <!-- Código -->
     <ng-container matColumnDef="codigo">
@@ -17,7 +18,7 @@
     <!-- Nombre -->
     <ng-container matColumnDef="nombre">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre del Curso</th>
-      <td mat-cell *matCellDef="let curso">{{ curso.nombre }}</td>
+      <td mat-cell *matCellDef="let curso" class="col-nombre">{{ curso.nombre }}</td>
     </ng-container>
 
     <!-- Créditos -->
@@ -29,7 +30,7 @@
     <!-- Docente -->
     <ng-container matColumnDef="docente">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Docente Asignado</th>
-      <td mat-cell *matCellDef="let curso">{{ curso.docente }}</td>
+      <td mat-cell *matCellDef="let curso" class="col-docente">{{ curso.docente }}</td>
     </ng-container>
 
     <!-- Cupos -->
@@ -75,7 +76,7 @@
     <!-- Estado -->
     <ng-container matColumnDef="estado">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
-      <td mat-cell *matCellDef="let curso">
+      <td mat-cell *matCellDef="let curso" class="col-estado">
         <span [ngClass]="curso.estado.toLowerCase().replace(' ', '-')">{{ curso.estado }}</span>
       </td>
     </ng-container>
@@ -98,7 +99,8 @@
     <!-- Filas -->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+    </table>
+  </div>
 
   <!-- Paginador -->
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
