--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -9,13 +9,14 @@
 
       <form [formGroup]="loginForm" (ngSubmit)="onLogin()" class="login-form">
         <mat-form-field appearance="outline" class="login-input">
-          <mat-label>Correo</mat-label>
+          <mat-label>Correo<span class="required-asterisk">*</span></mat-label>
           <input matInput 
                  type="email" 
                  formControlName="correo" 
                  placeholder="correo@unicauca.edu.co"
                  (focus)="clearError()"
-                 autocomplete="email">
+                 autocomplete="email"
+                 required>
           <mat-icon matPrefix>mail</mat-icon>
           <mat-error *ngIf="loginForm.controls['correo'].invalid && loginForm.controls['correo'].touched">
             {{ getEmailErrorMessage() }}
@@ -23,13 +24,14 @@
         </mat-form-field>
 
         <mat-form-field appearance="outline" class="login-input">
-          <mat-label>Contraseña</mat-label>
+          <mat-label>Contraseña<span class="required-asterisk">*</span></mat-label>
           <input matInput 
                  [type]="hide ? 'password' : 'text'" 
                  formControlName="password" 
                  placeholder="Min. 8 caracteres"
                  (focus)="clearError()"
-                 autocomplete="current-password">
+                 autocomplete="current-password"
+                 required>
           <mat-icon matPrefix>lock</mat-icon>
           <button mat-icon-button matSuffix type="button" (click)="hide = !hide" [attr.aria-label]="hide ? 'Mostrar contraseña' : 'Ocultar contraseña'">
             <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
