--- a/src/app/pages/estudiante/cursos-intersemestrales/ver-solicitud/ver-solicitud.component.html
+++ b/src/app/pages/estudiante/cursos-intersemestrales/ver-solicitud/ver-solicitud.component.html
@@ -52,6 +52,13 @@
           <span class="estado-badge">
             {{ preinscripcion.estado }}
           </span>
+        </td>
+      </ng-container>
+
+      <!-- Comentario -->
+      <ng-container matColumnDef="comentario">
+        <th mat-header-cell *matHeaderCellDef>Comentario</th>
+        <td mat-cell *matCellDef="let preinscripcion" class="comentario-cell">
           <ng-container *ngIf="getComentarioEstadoActual(preinscripcion) as comentario">
             <div class="motivo-container" [ngClass]="getMotivoClass(preinscripcion)">
               <mat-icon class="motivo-icon">{{ esEstadoRechazado(preinscripcion.estado) ? 'error_outline' : 'info' }}</mat-icon>
@@ -61,6 +68,7 @@
               </div>
             </div>
           </ng-container>
+          <span *ngIf="!getComentarioEstadoActual(preinscripcion)" class="text-muted">-</span>
         </td>
       </ng-container>
 
@@ -140,8 +148,8 @@
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="['curso','fecha','estado','estadoCurso','acciones']"></tr>
-      <tr mat-row *matRowDef="let row; columns: ['curso','fecha','estado','estadoCurso','acciones'];"></tr>
+      <tr mat-header-row *matHeaderRowDef="['curso','fecha','estado','comentario','estadoCurso','acciones']"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['curso','fecha','estado','comentario','estadoCurso','acciones'];"></tr>
     </table>
   </div>
 
@@ -169,6 +177,13 @@
           <span class="estado-badge">
             {{ inscripcion.estado }}
           </span>
+        </td>
+      </ng-container>
+
+      <!-- Comentario -->
+      <ng-container matColumnDef="comentario">
+        <th mat-header-cell *matHeaderCellDef>Comentario</th>
+        <td mat-cell *matCellDef="let inscripcion" class="comentario-cell">
           <ng-container *ngIf="getComentarioEstadoActual(inscripcion) as comentario">
             <div class="motivo-container" [ngClass]="getMotivoClass(inscripcion)">
               <mat-icon class="motivo-icon">{{ esEstadoRechazado(inscripcion.estado) ? 'error_outline' : 'info' }}</mat-icon>
@@ -178,6 +193,7 @@
               </div>
             </div>
           </ng-container>
+          <span *ngIf="!getComentarioEstadoActual(inscripcion)" class="text-muted">-</span>
         </td>
       </ng-container>
 
@@ -219,8 +235,8 @@
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="['curso','fecha','estado','estadoCurso','acciones']"></tr>
-      <tr mat-row *matRowDef="let row; columns: ['curso','fecha','estado','estadoCurso','acciones'];"></tr>
+      <tr mat-header-row *matHeaderRowDef="['curso','fecha','estado','comentario','estadoCurso','acciones']"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['curso','fecha','estado','comentario','estadoCurso','acciones'];"></tr>
     </table>
   </div>
 
