--- a/src/app/pages/funcionario/cursos-intersemestrales/inscribir-estudiantes/inscribir-estudiantes.component.html
+++ b/src/app/pages/funcionario/cursos-intersemestrales/inscribir-estudiantes/inscribir-estudiantes.component.html
@@ -61,15 +61,7 @@
         <ng-container matColumnDef="estado_inscripcion">
           <th mat-header-cell *matHeaderCellDef>Estado</th>
           <td mat-cell *matCellDef="let estudiante">
-            <span [ngClass]="{
-              'estado-aprobada': estudiante.estado_inscripcion === 'APROBADA',
-              'estado-enviada': estudiante.estado_inscripcion === 'Enviada',
-              'estado-pago-validado': estudiante.estado_inscripcion === 'Pago_Validado',
-              'estado-pago-rechazado': estudiante.estado_inscripcion === 'Pago_Rechazado',
-              'estado-default': !estudiante.estado_inscripcion
-            }" class="estado-badge">
-              {{ estudiante.estado_inscripcion || estudiante.tipo_solicitud }}
-            </span>
+            {{ estudiante.estado_inscripcion || estudiante.tipo_solicitud }}
           </td>
         </ng-container>
 
@@ -77,28 +69,21 @@
         <ng-container matColumnDef="comprobante_pago">
           <th mat-header-cell *matHeaderCellDef>Estado del Proceso</th>
           <td mat-cell *matCellDef="let estudiante">
-            <div class="comprobante-cell">
-              <span *ngIf="estudiante.estado_inscripcion === 'Pago_Rechazado'" class="estado-rechazado">
-                <mat-icon style="color: #f44336 !important;">cancel</mat-icon>
-                <span>Inscripción rechazada</span>
-              </span>
-              <span *ngIf="estudiante.estado_inscripcion === 'Pago_Validado'" class="estado-validado">
-                <mat-icon style="color: #4CAF50 !important;">check_circle</mat-icon>
-                <span>Pago validado</span>
-              </span>
-              <span *ngIf="estudiante.estado_inscripcion === 'APROBADA'" class="estado-aprobada">
-                <mat-icon style="color: #4CAF50 !important;">check_circle</mat-icon>
-                <span>Inscripción aprobada</span>
-              </span>
-              <span *ngIf="estudiante.estado_inscripcion === 'Enviada'" class="estado-enviada">
-                <mat-icon style="color: #ff9800 !important;">schedule</mat-icon>
-                <span>Pendiente de revisión</span>
-              </span>
-              <span *ngIf="!estudiante.estado_inscripcion" class="estado-default">
-                <mat-icon style="color: #4CAF50 !important;">check_circle</mat-icon>
-                <span>Listo para inscripción</span>
-              </span>
-            </div>
+            <span *ngIf="estudiante.estado_inscripcion === 'Pago_Rechazado'">
+              Inscripción rechazada
+            </span>
+            <span *ngIf="estudiante.estado_inscripcion === 'Pago_Validado'">
+              Pago validado
+            </span>
+            <span *ngIf="estudiante.estado_inscripcion === 'APROBADA'">
+              Inscripción aprobada
+            </span>
+            <span *ngIf="estudiante.estado_inscripcion === 'Enviada'">
+              Pendiente de revisión
+            </span>
+            <span *ngIf="!estudiante.estado_inscripcion">
+              Listo para inscripción
+            </span>
           </td>
         </ng-container>
 
